--- a/index.html
+++ b/index.html
@@ -10,50 +10,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Joshua Hong Golf</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
 
   <style>
-    /* 1. 좌우 흔들림 방지 및 기본 설정 */
+    /* 1. 기본 설정 및 폰트 가늘게 조정 */
     html, body {
       margin: 0; padding: 0; width: 100%; overflow-x: hidden; 
-      /* 폰트 업그레이드 */
       font-family: 'Montserrat', sans-serif;
+      font-weight: 300; /* 전체적으로 가늘게 설정 */
     }
     * { box-sizing: border-box; }
 
     /* [상단 고정 헤더] */
     .sticky-top {
       position: sticky; top: 0; z-index: 1000; width: 100%;
-      background: #fff; box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      background: #fff; box-shadow: 0 2px 10px rgba(0,0,0,0.05);
     }
     .top-bar {
-      /* 색상을 조금 더 깊이감 있게 수정 */
       background-color: #5a4a08; color: white; text-align: center;
-      padding: 10px 0; font-size: 13px; font-weight: 500;
-      font-family: 'Oswald', sans-serif; letter-spacing: 1px;
+      padding: 10px 0; font-size: 12px;
+      font-family: 'Oswald', sans-serif; letter-spacing: 1.5px;
+      font-weight: 400; /* Bold 해제 */
     }
     .header-wrapper {
       display: flex; justify-content: space-between; align-items: center;
-      padding: 0 5%; height: 70px; /* 높이를 살짝 키워 시원하게 */
+      padding: 0 5%; height: 70px;
     }
 
     .logo-area { display: flex; align-items: center; text-decoration: none; color: #333; }
-    .logo-img { height: 45px; width: auto; margin-right: 12px; }
+    .logo-img { height: 40px; width: auto; margin-right: 12px; }
     
     .logo-text { 
-      font-family: 'Oswald', sans-serif; /* 텍스트 폰트 변경 */
-      font-weight: 700; font-size: 19px; display: inline-block; 
-      text-transform: uppercase; letter-spacing: 0.5px;
+      font-family: 'Oswald', sans-serif;
+      font-weight: 500; font-size: 18px; display: inline-block; 
+      text-transform: uppercase; letter-spacing: 1px;
     }
 
-    /* [PC 메뉴] 폰트 및 이름 변경 */
-    .nav-links { display: flex; gap: 20px; }
+    /* [PC 메뉴] 굵기 완화 및 영어 단일화 */
+    .nav-links { display: flex; gap: 25px; }
     .nav-links a { 
-      text-decoration: none; color: #444; font-size: 12px; font-weight: 700; 
+      text-decoration: none; color: #666; font-size: 13px; 
+      font-weight: 400; /* Bold 해제하여 깔끔하게 */
       text-transform: uppercase; font-family: 'Oswald', sans-serif;
-      letter-spacing: 0.5px; transition: 0.3s;
+      letter-spacing: 1px; transition: 0.3s;
     }
-    .nav-links a.active { color: #F15A22; border-bottom: 2px solid #F15A22; }
+    .nav-links a.active { color: #F15A22; border-bottom: 1px solid #F15A22; }
     .nav-links a:hover { color: #F15A22; }
 
     .menu-toggle {
@@ -61,15 +62,15 @@
       background: none; border: none; padding: 0; margin-right: 15px;
     }
 
-    /* [TOP 버튼] UTSA 오렌지색 유지 */
+    /* [TOP 버튼] */
     #fixedTopBtn {
       position: fixed !important; bottom: 25px !important; right: 20px !important;
-      width: 50px !important; height: 50px !important;
+      width: 45px !important; height: 45px !important;
       background-color: #F15A22 !important; 
       color: #ffffff !important; border: none !important; border-radius: 50% !important;
-      font-weight: 900 !important; font-size: 12px !important;
+      font-weight: 400 !important; font-size: 11px !important;
       z-index: 9999 !important; cursor: pointer !important;
-      display: none; box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      display: none; box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
 
     @media (max-width: 768px) {
@@ -80,11 +81,11 @@
       .nav-links {
         position: fixed; top: 0; left: -100%; width: 260px; height: 100vh;
         background: #fff; flex-direction: column; padding: 80px 30px;
-        transition: 0.3s; z-index: 2000; box-shadow: 5px 0 15px rgba(0,0,0,0.2);
+        transition: 0.3s; z-index: 2000; box-shadow: 5px 0 15px rgba(0,0,0,0.1);
       }
       .nav-links.active { left: 0; }
       .close-menu { position: absolute; top: 20px; right: 20px; font-size: 24px; cursor: pointer; }
-      .nav-links a { width: 100%; font-size: 16px; padding: 10px 0; border-bottom: 1px solid #eee; }
+      .nav-links a { width: 100%; font-size: 15px; padding: 12px 0; border-bottom: 1px solid #eee; }
     }
   </style>
 </head>
@@ -103,11 +104,11 @@
 
       <nav class="nav-links" id="navLinks">
         <span class="close-menu" onclick="toggleMenu()">✕</span>
-        <a href="index.html" class="active">Home / Inicio</a>
-        <a href="ncaa-stats.html">NCAA / Stats</a>
-        <a href="news-media.html">News / Noticias</a>
-        <a href="reference-links.html">Links / Enlaces</a>
-        <a href="junior-career.html">Junior / Carrera</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="ncaa-stats.html">NCAA Stats</a>
+        <a href="news-media.html">News & Media</a>
+        <a href="reference-links.html">Links</a>
+        <a href="junior-career.html">Junior Career</a>
       </nav>
     </header>
   </div>
