--- a/index.html
+++ b/index.html
@@ -34,73 +34,71 @@
     }
     .header-wrapper {
       display: flex; justify-content: space-between; align-items: center;
-      padding: 0 5%; height: 70px;
+      padding: 0 5%; height: 75px; /* 높이 약간 조절 */
     }
 
     .logo-area { display: flex; align-items: center; text-decoration: none; color: #333; }
-    .logo-img { height: 40px; width: auto; margin-right: 12px; }
-    .logo-text { font-family: 'Oswald', sans-serif; font-weight: 500; font-size: 17px; text-transform: uppercase; letter-spacing: 1px; }
+    .logo-img { height: 45px; width: auto; margin-right: 12px; } /* 로고 기본 크기 확대 */
+    .logo-text { font-family: 'Oswald', sans-serif; font-weight: 500; font-size: 18px; text-transform: uppercase; letter-spacing: 1px; }
 
-    /* [메뉴 버튼] 로고와 겹치지 않게 고정 너비와 여백 설정 */
+    /* [메뉴 버튼] */
     .menu-toggle {
-      display: none; font-size: 28px; cursor: pointer;
+      display: none; font-size: 30px; cursor: pointer;
       background: none; border: none; padding: 10px; 
       color: #F15A22; z-index: 3000; position: relative;
-      width: 50px; text-align: left;
     }
 
-    /* [모바일 및 가로모드 통합 대응] */
-    @media (max-width: 1024px) { /* 가로모드 대응을 위해 범위를 넓혔습니다 */
-      .header-wrapper { justify-content: flex-start; gap: 5px; } 
-      .menu-toggle { display: block; flex-shrink: 0; }
-      .logo-area { display: flex; align-items: center; }
+    @media (max-width: 768px) {
+      /* 로고와 버튼 겹침 방지: 간격과 배치 수정 */
+      .header-wrapper { justify-content: flex-start; gap: 20px; } 
+      .menu-toggle { display: block; flex-shrink: 0; margin-left: -10px; }
+      .logo-area { display: flex; align-items: center; flex-grow: 1; }
       .logo-text { display: none; } 
-      .logo-img { height: 32px; margin-right: 0; }
+      .logo-img { height: 42px; } /* 모바일에서 로고 크기 확실히 키움 */
 
       .nav-links {
         position: fixed; top: 0; left: -100%; 
-        width: 210px; /* 메뉴창을 더 좁게 설정 */
-        height: 100vh;
-        background: #fff; flex-direction: column; padding: 30px 20px;
-        transition: 0.3s; z-index: 2000; box-shadow: 5px 0 15px rgba(0,0,0,0.1);
+        width: 230px; height: 100vh;
+        background: #ffffff !important; /* 절대 투명하지 않은 순백색 */
+        flex-direction: column; padding: 40px 25px;
+        transition: 0.3s ease-in-out; z-index: 2000; 
+        box-shadow: 10px 0 20px rgba(0,0,0,0.1);
         display: flex;
-        overflow-y: auto; /* 가로모드에서 메뉴가 길어질 경우 스크롤 가능하게 함 */
       }
       .nav-links.active { left: 0; }
       
       .mobile-menu-logo { 
-        display: block; margin-bottom: 10px; border-bottom: 1px solid #eee; padding-bottom: 10px;
+        display: block; margin-bottom: 20px; border-bottom: 2px solid #F15A22; padding-bottom: 15px;
       }
-      .mobile-menu-logo img { height: 28px; }
+      .mobile-menu-logo img { height: 35px; }
 
-      /* 메뉴 항목 간격 */
+      /* 메뉴 항목 간격 및 폰트 */
       .nav-links a { 
-        width: 100%; font-size: 13px; padding: 8px 0;
-        border-bottom: 1px solid #f9f9f9; text-decoration: none; color: #666;
+        width: 100%; font-size: 14px; padding: 12px 0;
+        border-bottom: 1px solid #f2f2f2; text-decoration: none; color: #444;
         font-family: 'Oswald', sans-serif; text-transform: uppercase;
+        letter-spacing: 1px;
       }
-      .nav-links a.active { color: #F15A22; border-bottom: 1px solid #F15A22; }
+      .nav-links a.active { color: #F15A22; font-weight: 500; }
 
-      /* 인스타그램 디자인 - 단순화(Simple Rectangle) */
-      .insta-section { display: block; margin-top: 20px; text-align: left; }
-      .insta-text { 
-        color: #999; font-size: 10px; letter-spacing: 1px; 
-        margin-bottom: 8px; font-weight: 400; text-transform: uppercase; display: block;
+      /* 하단 텍스트 섹션 (인스타 대신 삽입) */
+      .menu-footer {
+        margin-top: auto; /* 메뉴 하단으로 밀기 */
+        padding-top: 20px;
+        border-top: 1px solid #eee;
       }
-      .insta-btn-simple {
-        display: inline-block; padding: 8px 15px;
-        border: 1px solid #333; background: #fff;
-        color: #333; text-decoration: none; 
-        font-weight: 500; font-size: 11px; 
-        font-family: 'Oswald', sans-serif;
-        text-align: center;
+      .footer-name {
+        display: block; font-family: 'Oswald', sans-serif;
+        font-size: 16px; font-weight: 500; color: #333;
+        letter-spacing: 1px; margin-bottom: 4px;
       }
-      .insta-btn-simple:active { background: #eee; }
+      .footer-team {
+        display: block; font-family: 'Oswald', sans-serif;
+        font-size: 12px; font-weight: 400; color: #F15A22; /* UTSA 오렌지 포인트 */
+        letter-spacing: 1.5px;
+      }
 
-      /* 가로모드에서 아이콘이 커지는 문제 방지 */
-      svg { width: 14px; height: 14px; vertical-align: middle; margin-right: 5px; }
-
-      .close-menu { position: absolute; top: 15px; right: 15px; font-size: 20px; cursor: pointer; color: #ccc; }
+      .close-menu { position: absolute; top: 20px; right: 20px; font-size: 22px; cursor: pointer; color: #999; }
     }
   </style>
 </head>
@@ -126,11 +124,9 @@
         <a href="reference-links.html">Links</a>
         <a href="junior-career.html">Junior Career</a>
 
-        <div class="insta-section">
-            <span class="insta-text">Follow on</span>
-            <a href="https://www.instagram.com/joshuahayoung/" target="_blank" class="insta-btn-simple">
-              INSTAGRAM
-            </a>
+        <div class="menu-footer">
+            <span class="footer-name">JOSHUA HONG</span>
+            <span class="footer-team">UTSA MEN'S GOLF</span>
         </div>
       </nav>
     </header>
