--- a/news-media.html
+++ b/news-media.html
@@ -134,7 +134,7 @@
         <a href="index.html">Home</a>
         <a href="ncaa-stats.html">NCAA Stats</a>
         <a href="news-media.html" class="active">News & Media</a>
-        <a href="reference-links.html">Links</a>
+        <a href="reference-links.html">Reference & Links</a>
         <a href="junior-career.html">Junior Career</a>
 
         <div class="menu-footer">
