--- a/junior-career.html
+++ b/junior-career.html
@@ -133,7 +133,7 @@
         <a href="index.html">Home</a>
         <a href="ncaa-stats.html">NCAA Stats</a>
         <a href="news-media.html">News & Media</a>
-        <a href="reference-links.html">Links</a>
+        <a href="reference-links.html">Reference & Links</a>
         <a href="junior-career.html" class="active">Junior Career</a>
 
         <div class="menu-footer">
