--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <a href="index.html" class="active">Home</a>
         <a href="ncaa-stats.html">NCAA Stats</a>
         <a href="news-media.html">News & Media</a>
-        <a href="reference-links.html">Links</a>
+        <a href="reference-links.html">Reference & Links</a>
         <a href="junior-career.html">Junior Career</a>
 
         <div class="menu-footer">
