--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -236,7 +236,7 @@
       .ms-item { flex: 1; text-align: center; border-right: 1px solid #eee; }
       .ms-item:last-child { border-right: none; }
       .ms-label { display: block; font-size: 9px; color: #aaa; font-weight: 800; margin-bottom: 2px; }
-      .ms-value { display: block; font-size: 13px; font-weight: 800; color: #bdc3c7; } /* 예정 경기는 연하게 처리 */
+      .ms-value { display: block; font-size: 13px; font-weight: 800; color: #bdc3c7; }
     }
     
     /* PC 전용 너비 설정 */
@@ -244,7 +244,6 @@
       .mobile-status-bar { display: none !important; }
       .col-date { width: 15%; }
       .col-course { width: 45%; }
-      .col-stat { width: 10%; }
     }
   </style>
 
@@ -262,7 +261,7 @@
       <h2 style="color: #0c2340; border-left: 6px solid #2e7d32; padding-left: 15px; font-size: 22px; margin: 0; font-weight: 800;">
         2026 NCAA Spring Season <span style="font-weight: 400; font-size: 16px; color: #2e7d32;">(Scheduled)</span>
       </h2>
-      <div style="font-size: 11px; color: #95a5a6; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">
+      <div style="font-size: 12px; color: #95a5a6; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">
         Last Updated: Jan 2026
       </div>
     </div>
@@ -273,84 +272,174 @@
           <tr>
             <th class="col-date">Date</th>
             <th class="col-course">Tournament / Course</th>
-            <th class="col-stat" style="text-align: center;">R1-R2-R3</th>
-            <th class="col-stat" style="text-align: center;">Total</th>
-            <th class="col-stat" style="text-align: center;">Par</th>
-            <th class="col-stat" style="text-align: center;">Finish</th>
+            <th style="text-align: center;">R1-R2-R3</th>
+            <th style="text-align: center;">Total</th>
+            <th style="text-align: center;">Par</th>
+            <th style="text-align: center;">Finish</th>
           </tr>
         </thead>
         <tbody style="color: #2d3436;">
           
           <tr>
             <td>
-              <div style="font-weight: 700; color: #2e7d32; font-size: 13px;">Feb 2-4, 2026</div>
+              <div style="font-weight: 600; font-size: 14.5px;">Feb 2-4</div>
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Compadres Collegiate (UTRGV)</div>
-              <div style="font-size: 13px; color: #7f8c8d;">Iberostar Playa Paraiso - MX</div>
+              <div style="font-size: 13px; color: #7f8c8d;">Iberostar Playa Paraiso - Playa Del Carmen, MX</div>
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div>
                 <div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
-                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">TBD</span></div>
+                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div>
               </div>
             </td>
             <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
             <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
             <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
-            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">TBD</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
           </tr>
 
           <tr style="background-color: #fcfdfe;">
             <td>
-              <div style="font-weight: 700; color: #2e7d32; font-size: 13px;">Feb 23-24, 2026</div>
+              <div style="font-weight: 600; font-size: 14.5px;">Feb 23-24</div>
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Lone Star Collegiate (UTSA)</div>
-              <div style="font-size: 13px; color: #7f8c8d;">TPC San Antonio Canyons - TX</div>
+              <div style="font-size: 13px; color: #7f8c8d;">TPC San Antonio Canyons - San Antonio, TX</div>
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div>
                 <div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
-                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">TBD</span></div>
+                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div>
               </div>
             </td>
             <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
             <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
             <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
-            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">TBD</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
           </tr>
 
-          <tr style="background: rgba(201, 138, 46, 0.03);">
+          <tr>
             <td>
-              <div style="font-weight: 700; color: #c98a2e; font-size: 13px;">Apr 27-29, 2026</div>
-              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">American Conference Championship</div>
-              <div style="font-size: 13px; color: #7f8c8d;">Ritz Carlton Members Club - FL</div>
-              <div class="mobile-status-bar" style="background: rgba(201, 138, 46, 0.05);">
+              <div style="font-weight: 600; font-size: 14.5px;">Mar 2-3</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Golden Nugget Inv. (Lamar)</div>
+              <div style="font-size: 13px; color: #7f8c8d;">The CC at Golden Nugget - Lake Charles, LA</div>
+              <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div>
                 <div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
-                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value" style="color:#c98a2e;">TBD</span></div>
+                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div>
               </div>
             </td>
             <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
             <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
             <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
-            <td class="hide-log-mobile" style="text-align: center; font-weight: 700; color: #c98a2e;">TBD</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+          </tr>
+
+          <tr style="background-color: #fcfdfe;">
+            <td>
+              <div style="font-weight: 600; font-size: 14.5px;">Mar 16-17</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Arizona Thunderbirds Intercollegiate</div>
+              <div style="font-size: 13px; color: #7f8c8d;">Tucson CC - Tucson, AZ</div>
+              <div class="mobile-status-bar">
+                <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div>
+              </div>
+            </td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+          </tr>
+
+          <tr>
+            <td>
+              <div style="font-weight: 600; font-size: 14.5px;">Mar 23-24</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Bell Bank "Pay it Forward" Collegiate</div>
+              <div style="font-size: 13px; color: #7f8c8d;">Wigwam GC - Litchfield Park, AZ</div>
+              <div class="mobile-status-bar">
+                <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div>
+              </div>
+            </td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+          </tr>
+
+          <tr style="background-color: #fcfdfe;">
+            <td>
+              <div style="font-weight: 600; font-size: 14.5px;">Apr 6-7</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Tiger Intercollegiate (Missouri)</div>
+              <div style="font-size: 13px; color: #7f8c8d;">The Club at Old Hawthorne - Columbia, MO</div>
+              <div class="mobile-status-bar">
+                <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div>
+              </div>
+            </td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+          </tr>
+
+          <tr style="border-bottom: 1px solid #edf2f7; background: rgba(201, 138, 46, 0.03);">
+            <td>
+              <div style="font-weight: 600; font-size: 14.5px; color: #c98a2e;">Apr 27-29</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">American Conference Championship</div>
+              <div style="font-size: 13px; color: #7f8c8d;">Ritz Carlton Members Club - Sarasota, FL</div>
+              <div class="mobile-status-bar">
+                <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div>
+              </div>
+            </td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+          </tr>
+
+          <tr>
+            <td>
+              <div style="font-weight: 600; font-size: 14.5px;">May 18-20</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">NCAA Regional</div>
+              <div style="font-size: 13px; color: #7f8c8d;">TBD - Location to be Announced</div>
+              <div class="mobile-status-bar">
+                <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div>
+              </div>
+            </td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
           </tr>
 
           <tr style="background: rgba(12, 35, 64, 0.05);">
             <td>
-              <div style="font-weight: 700; color: #0c2340; font-size: 13px;">May 29 - Jun 3, 2026</div>
-              <div style="font-weight: 900; color: #0c2340; font-size: 16px; margin: 2px 0;">NCAA Championship</div>
+              <div style="font-weight: 600; font-size: 14.5px; color: #0c2340;">May 29 - Jun 3</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">NCAA Championship</div>
               <div style="font-size: 13px; color: #7f8c8d;">Omni La Costa - Carlsbad, CA</div>
-              <div class="mobile-status-bar" style="background: white;">
+              <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div>
                 <div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
-                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value" style="color:#0c2340;">TBD</span></div>
+                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div>
               </div>
             </td>
             <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
             <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
             <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
-            <td class="hide-log-mobile" style="text-align: center; font-weight: 900; color: #0c2340;">TBD</td>
+            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
           </tr>
         </tbody>
       </table>
