--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -197,19 +197,28 @@
 </div>
 
 
+  
 <div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
   <style>
-    .log-table { width: 100%; border-collapse: collapse; background: white; table-layout: fixed; margin-bottom: 40px; }
-    .log-table th { background: #f8f9fa; font-size: 11px; color: #0c2340; text-transform: uppercase; padding: 18px 10px; border-bottom: 2px solid #0c2340; }
-    .log-table td { padding: 18px 10px; border-bottom: 1px solid #edf2f7; vertical-align: middle; }
+    /* 기본 테이블 스타일 (데스크탑 중심) */
+    .log-table { width: 100%; border-collapse: collapse; background: white; table-layout: fixed; margin-bottom: 40px; border: none; }
+    .log-table th { background: #f8f9fa; font-size: 12px; color: #0c2340; text-transform: uppercase; padding: 15px 10px; border-bottom: 2px solid #0c2340; text-align: center; }
+    .log-table th.col-left { text-align: left; padding-left: 20px; }
+    .log-table td { padding: 15px 10px; border-bottom: 1px solid #edf2f7; vertical-align: middle; text-align: center; }
+    .log-table td.col-left { text-align: left; padding-left: 20px; }
     
+    .under-par { color: #e74c3c; font-weight: 800; }
+    .scheduled-text { font-size: 11px; color: #95a5a6; font-weight: 600; }
+    .today-text { font-size: 12px; font-weight: 800; color: #e74c3c; }
+
+    /* 모바일 대응 (768px 이하) */
     @media (max-width: 768px) {
       .log-table thead { display: none; }
       .log-table, .log-table tbody, .log-table tr, .log-table td { display: block; width: 100%; box-sizing: border-box; }
       .log-table tr { margin-bottom: 20px; border: 1px solid #e2e8f0 !important; border-radius: 15px; padding: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.03); }
-      .log-table td { border: none; padding: 0; text-align: left; }
-      .hide-log-mobile { display: none !important; }
+      .log-table td { border: none !important; padding: 0 !important; text-align: left !important; }
+      .hide-mobile { display: none !important; }
       .mobile-status-bar { display: flex !important; background: #fcfcfc; border-radius: 8px; margin-top: 15px; padding: 10px 5px; border: 1px dashed #e2e8f0; }
       .ms-item { flex: 1; text-align: center; border-right: 1px solid #eee; }
       .ms-item:last-child { border-right: none; }
@@ -219,11 +228,12 @@
     
     @media (min-width: 769px) {
       .mobile-status-bar { display: none !important; }
-      .col-date { width: 15%; }
-      .col-course { width: 45%; }
+      .col-info { width: 55%; }
+      .col-score { width: 10%; }
+      .col-par { width: 10%; }
+      .col-status { width: 15%; }
+      .col-finish { width: 10%; }
     }
-    /* 언더파 스타일 */
-    .under-par { color: #e74c3c; font-weight: 800; }
   </style>
 
   <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
@@ -236,30 +246,27 @@
   </div>
 
   <div style="margin-bottom: 50px;">
-    <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 20px; flex-wrap: wrap; gap: 10px;">
-      <h2 style="color: #0c2340; border-left: 6px solid #e74c3c; padding-left: 15px; font-size: 22px; margin: 0; font-weight: 800;">
-        Cancun Collegiate Qualifying <span style="font-weight: 400; font-size: 16px; color: #e74c3c;">(In Progress)</span>
-      </h2>
-    </div>
+    <h2 style="color: #0c2340; border-left: 6px solid #e74c3c; padding-left: 15px; font-size: 22px; margin: 0 0 20px; font-weight: 800;">
+      Cancun Collegiate Qualifying <span style="font-weight: 400; font-size: 16px; color: #e74c3c;">(In Progress)</span>
+    </h2>
 
-    <div style="border-radius: 15px; border: 1px solid #e2e8f0; overflow: hidden; box-shadow: 0 10px 30px rgba(231, 76, 60, 0.1);">
+    <div style="border-radius: 15px; border: 1px solid #e2e8f0; overflow: hidden; box-shadow: 0 10px 30px rgba(231, 76, 60, 0.08);">
       <table class="log-table" style="margin-bottom: 0;">
         <thead>
           <tr style="border-bottom: 2px solid #e74c3c;">
-            <th class="col-date">Date</th>
-            <th class="col-course">Course</th>
-            <th style="text-align: center;">Score</th>
-            <th style="text-align: center;">Par</th>
-            <th style="text-align: center;">Status</th>
-            <th style="text-align: center;">Finish</th>
+            <th class="col-info col-left">Tournament Details</th>
+            <th class="col-score">Score</th>
+            <th class="col-par">Par</th>
+            <th class="col-status">Status</th>
+            <th class="col-finish">Finish</th>
           </tr>
         </thead>
-        <tbody style="color: #2d3436;">
+        <tbody>
           <tr style="background: rgba(231, 76, 60, 0.02);">
-            <td>
-              <div style="font-weight: 600; font-size: 14.5px;">Jan 22</div>
+            <td class="col-left">
+              <div style="font-weight: 600; font-size: 13px; color: #e74c3c;">Jan 22, 2026</div>
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 1: The Canyons Course</div>
-              <div style="font-size: 13px; color: #7f8c8d;">TPC San Antonio - San Antonio, TX</div>
+              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio (Par 72)</div>
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">68</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-4</span></div>
@@ -267,66 +274,100 @@
                 <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">T1</span></div>
               </div>
             </td>
-            <td class="hide-log-mobile" style="text-align: center; font-weight: 700;">68</td>
-            <td class="hide-log-mobile" style="text-align: center;"><span class="under-par">-4</span></td>
-            <td class="hide-log-mobile" style="text-align: center; font-size: 12px; font-weight: 700;">Final</td>
-            <td class="hide-log-mobile" style="text-align: center; font-weight: 800;">T1</td>
+            <td class="hide-mobile" style="font-weight: 700; font-size: 16px;">68</td>
+            <td class="hide-mobile"><span class="under-par" style="font-size: 16px;">-4</span></td>
+            <td class="hide-mobile" style="font-weight: 700; font-size: 13px;">Final</td>
+            <td class="hide-mobile" style="font-weight: 800; font-size: 16px;">T1</td>
           </tr>
           <tr>
-            <td>
-              <div style="font-weight: 600; font-size: 14.5px;">Jan 23</div>
+            <td class="col-left">
+              <div style="font-weight: 600; font-size: 13px;">Jan 23, 2026</div>
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 2: The Oaks Course</div>
-              <div style="font-size: 13px; color: #7f8c8d;">TPC San Antonio - San Antonio, TX</div>
+              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio</div>
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
-                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value" style="color:#e74c3c;">Today</span></div>
+                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value today-text">Today</span></div>
                 <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div>
               </div>
             </td>
-            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
-            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
-            <td class="hide-log-mobile" style="text-align: center; font-size: 12px; font-weight: 700; color:#e74c3c;">Today</td>
-            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+            <td class="hide-mobile today-text">Today</td>
+            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           </tr>
           <tr>
-            <td>
-              <div style="font-weight: 600; font-size: 14.5px;">Jan 26</div>
+            <td class="col-left">
+              <div style="font-weight: 600; font-size: 13px;">Jan 26, 2026</div>
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 3: The Canyons Course</div>
-              <div style="font-size: 13px; color: #7f8c8d;">TPC San Antonio - San Antonio, TX</div>
+              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio</div>
               <div class="mobile-status-bar">
-                <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
-                <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
-                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value">Scheduled</span></div>
-                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value scheduled-text">Scheduled</span></div>
               </div>
             </td>
-            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
-            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
-            <td class="hide-log-mobile" style="text-align: center; font-size: 11px; color: #95a5a6;">Scheduled</td>
-            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+            <td class="hide-mobile scheduled-text">Scheduled</td>
+            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           </tr>
           <tr>
-            <td>
-              <div style="font-weight: 600; font-size: 14.5px;">Jan 27</div>
+            <td class="col-left">
+              <div style="font-weight: 600; font-size: 13px;">Jan 27, 2026</div>
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 4: The Oaks Course</div>
-              <div style="font-size: 13px; color: #7f8c8d;">TPC San Antonio - San Antonio, TX</div>
+              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio</div>
               <div class="mobile-status-bar">
-                <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
-                <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
-                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value">Scheduled</span></div>
-                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">-</span></div>
+                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value scheduled-text">Scheduled</span></div>
               </div>
             </td>
-            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
-            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
-            <td class="hide-log-mobile" style="text-align: center; font-size: 11px; color: #95a5a6;">Scheduled</td>
-            <td class="hide-log-mobile" style="text-align: center; color: #bdc3c7;">-</td>
+            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+            <td class="hide-mobile scheduled-text">Scheduled</td>
+            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
+
+  <hr style="border: none; border-top: 1px dashed #e2e8f0; margin-bottom: 50px;">
+
+  <div>
+    <h2 style="color: #0c2340; border-left: 6px solid #2e7d32; padding-left: 15px; font-size: 22px; margin: 0 0 20px; font-weight: 800;">
+      2026 NCAA Spring Season <span style="font-weight: 400; font-size: 16px; color: #2e7d32;">(Scheduled)</span>
+    </h2>
+
+    <div style="border-radius: 15px; border: 1px solid #e2e8f0; overflow: hidden; box-shadow: 0 10px 30px rgba(0,0,0,0.05);">
+      <table class="log-table" style="margin-bottom: 0;">
+        <thead>
+          <tr style="border-bottom: 2px solid #2e7d32;">
+            <th class="col-info col-left">Tournament / Course</th>
+            <th class="col-score">R1-2-3</th>
+            <th class="col-par">Total</th>
+            <th class="col-status">Par</th>
+            <th class="col-finish">Finish</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="col-left">
+              <div style="font-weight: 600; font-size: 13px;">Feb 2-4, 2026</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Compadres Collegiate (UTRGV)</div>
+              <div style="font-size: 12px; color: #7f8c8d;">Iberostar Playa Paraiso - MX</div>
+            </td>
+            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+          </tr>
+          </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+
+
+  
 
   <hr style="border: none; border-top: 1px dashed #e2e8f0; margin-bottom: 50px;">
 
