--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -296,9 +296,11 @@
               <div style="font-weight: 600; font-size: 13px; color: #e74c3c;">Jan 22, 2026</div>
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 1: The Canyons Course</div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio (Par 72)</div>
-              <a href="https://github.com/joshuahayoung/lab/blob/main/images/qualify%201%20cancun.jpg" target="_blank" class="card-link">
-                📄 View Scorecard
-              </a>
+            <a href="https://raw.githubusercontent.com/joshuahayoung/lab/main/images/qualify%201%20cancun.jpg" 
+       target="_blank" 
+       style="display: inline-flex; align-items: center; margin-top: 8px; padding: 5px 12px; background: #ffffff; color: #0c2340; text-decoration: none; font-size: 11px; font-weight: 800; border-radius: 6px; border: 1.5px solid #0c2340; transition: all 0.2s; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
+      <span style="margin-right: 5px;">📊</span> VIEW SCORECARD
+    </a>
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">68</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-4</span></div>
